# beecd

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build-fast.sh  build.sh  docker-compose.yaml
.cargo/: config.toml
.cross/: Dockerfile.aarch64-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-musl
.github/workflows/: build.yml
agent/: Cargo.toml  Dockerfile  Makefile  build.rs  build.sh
agent/src/: agent.rs  lib.rs  main.rs  util.rs
agent/src/tests/: agent_core_tests.rs  auth_tests.rs  common.rs  diff_tests.rs  fixtures.rs  mocks.rs  mod.rs  release_tests.rs  resource_tests.rs  retry_tests.rs  secret_tests.rs  weighted_tests.rs
agent/src/tests/fixtures/: multi_document.yaml  post_weighted_job.yaml  simple_configmap.yaml  simple_crd.yaml  simple_deployment.yaml  simple_job.yaml  simple_pod.yaml  simple_role.yaml  simple_rolebinding.yaml  simple_secret.yaml  simple_service.yaml  simple_statefulset.yaml  updated_deployment.yaml  weighted_deployment.yaml
agent/tests/: jwt_auth_tests.rs
deploy/helm/beecd/: Chart.yaml  values-example.yaml  values.yaml
deploy/helm/beecd/templates/: NOTES.txt  _helpers.tpl  hive-hq.yaml  hive-server.yaml  ingress.yaml  secrets.yaml
diff/: .gitignore  Cargo.toml
diff/src/: lib.rs
diff/tests/: fixture_tests.rs  integration_tests.rs
diff/tests/fixtures/: deployment_v1.yaml  deployment_v2.yaml  identical_deployment.yaml  multi_resource_v1.yaml  multi_resource_v2.yaml  statefulset_v1.yaml  statefulset_v2.yaml  with_managed_fields_v1.yaml  with_managed_fields_v2.yaml
docker/: base.Dockerfile  builder.Dockerfile
hack/: create-agent-user.sh  free-token.sh  generate-jwt-secret.sh  generate-sops-gpg-secret.sh  run-hive-hq-smoke.sh  setup-dev-db.sh  setup.sh
hive/: Cargo.toml  Dockerfile  Makefile  build.rs  build.sh
hive-hq/: .gitignore  Dockerfile  build.sh
hive-hq/api/: Cargo.toml
hive-hq/api/src/: auth_tests.rs  handler.rs  lib.rs  main.rs  util.rs
hive-hq/api/src/static/: agent.tpl.yaml
hive-hq/api/tests/: acl_tests.rs  api_integration_tests.rs  error_path_tests.rs  handler_validation_tests.rs  http_api_tests.rs  integration_tests.rs
hive-hq/api/tests/integration/: test_env.rs
hive-hq/types/: Cargo.toml
hive-hq/types/src/: lib.rs
hive-hq/ui/: index.html  package-lock.json  package.json
hive-hq/ui/src/: App.tsx  index.css
hive-hq/ui/src/api/: index.ts
hive-hq/ui/src/api/models/: AddClusterGroupInput.ts  AdditionalInstallation.ts  AutosyncData.ts  Cluster.ts  ClusterClusterGroups.ts  ClusterDefaultsResponse.ts  ClusterGroupClusterAssociation.ts  ClusterGroupData.ts  ClusterGroupServices.ts  ClusterNamespaceServicesData.ts  CreateServiceVersion.ts  DeleteRepoWebhookRequest.ts  DeprecateServiceVersion.ts  DiffData.ts  DiffDataWithBody.ts  ErrorCount.ts  Heartbeat.ts  HiveError.ts  NamespaceData.ts  PaginatedResponse_Cluster.ts  PaginatedResponse_ClusterGroupData.ts  PaginatedResponse_RepoData.ts  PaginatedResponse_ServiceDefinitionData.ts  PaginatedResponse_ServiceVersionForRelease.ts  PathTemplateValidation.ts  PendingReleases.ts  PinServiceVersion.ts  PostAdditionalInstallation.ts  PostBranch.ts  PostCluster.ts  PostClusterResponse.ts  PostInitReleases.ts  PostNamespaceNames.ts  PostRepo.ts  PostSubscriptions.ts  PostUser.ts  PutApprovals.ts  PutClusterGroup.ts  PutServiceData.ts  RegisterRepoWebhookRequest.ts  (+17 more)
hive-hq/ui/src/api/services/: HandlerService.ts
hive-hq/ui/src/components/: Alert.tsx  DataTable.tsx  Modal.tsx  PageHeader.tsx  Pagination.tsx  ThemeToggle.tsx  index.ts
hive-hq/ui/src/contexts/: ConfigContext.tsx  ThemeContext.tsx
hive-hq/ui/src/hooks/: index.ts  use-api.ts  use-paginated-data.ts  use-pagination.ts
hive-hq/ui/src/layouts/: MainLayout.tsx
hive-hq/ui/src/lib/: api-client.ts
hive-hq/ui/src/pages/: ClusterDetailPage.tsx  ClusterGroupDetailPage.tsx  ClusterGroupsPage.tsx  ClustersPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ReleaseDetailPage.tsx  RepoDetailPage.tsx  ReposPage.tsx  ServiceDetailPage.tsx  ServiceNamePage.tsx  ServicesPage.tsx  SettingsPage.tsx  index.ts
hive-hq/ui/src/types/: api.ts
hive/.cargo/: config.toml
hive/fixtures/: test_fixtures.sql
hive/migrations/: 00000000000000_init.sql  20260116000001_initial_schema.sql
hive/proto/: beecd.proto
hive/src/: auth.rs  main.rs
hive/tests/: approved_releases_tests.rs  auth_integration_tests.rs  auth_tests.rs  database_tests.rs  grpc_service_tests.rs  jwt_auth_tests.rs  yaml_tests.rs
hive/tests/common/: mod.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/src/manager/: aws_s3.rs  local_storage.rs  mod.rs
storage/tests/: docker-compose.minio.yml  error_handling_tests.rs  local_storage_tests.rs  minio_integration_tests.rs  setup-minio.sh
storage/tests/docker/: docker-compose.minio.yml  start-minio.sh
