[workspace]
resolver = "2"
members = ["agent", "hive", "hive-hq/api", "hive-hq/types", "diff", "storage"]

[workspace.package]
version = "0.0.3"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.31"
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"

# Web frameworks
axum = { version = "0.8.1", features = ["form"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"

# gRPC
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tonic-async-interceptor = "0.11.0"
prost = "0.12.3"

# Database
sqlx = { version = "0.8.3", features = [
    "json",
    "postgres",
    "uuid",
    "runtime-tokio",
    "chrono",
] }

# Kubernetes
kube = { version = "0.96.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }

# HTTP clients
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
hyper-rustls = "0.27.1"
hyper-tungstenite = "0.13.0"

# WebSocket
tungstenite = "0.21.0"

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.33", features = ["serde"] }
base64 = "0.22.1"
bcrypt = "0.17.0"
thiserror = "2.0.12"
anyhow = "1.0.75"
rand = "0.9.0"
url = "2.5.4"

# Logging/Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.22"

# Compression
flate2 = "1.1.1"

# AWS
aws-config = "1.6.1"
aws-sdk-s3 = "1.82.0"

# Other
tempfile = "3.13.0"
http = "0.2"
http-body = "0.4.4"
bytes = "1.5.0"
pin-project = "1.1.5"
yaml-rust = "0.4.5"
glob = "0.3.1"


# API documentation
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }

# Other utilities
ansi-to-html = "0.2.1"
tinytemplate = "1.2.1"
jsonwebtoken = "9.3.0"
regex = "1.10"
quick-xml = "0.37.1"
htmlescape = "0.3.1"
snailquote = "0.3.1"

# Cryptography
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"

# Build dependencies
tonic-build = "0.11.0"

# Local workspace crates
beecdiff = { path = "diff" }
beecdstorage = { path = "storage" }
types = { path = "hive-hq/types" }
