[package]
name = "hive"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
bytes.workspace = true
futures.workspace = true
tempfile.workspace = true
http.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-tungstenite.workspace = true
hyper-util.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tungstenite.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
uuid.workspace = true
chrono.workspace = true
bcrypt.workspace = true
tower.workspace = true
pin-project.workspace = true
http-body.workspace = true
tower-layer.workspace = true
tower-service.workspace = true
thiserror.workspace = true
serde_yaml.workspace = true
yaml-rust.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
beecdstorage.workspace = true
glob.workspace = true
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"
aes-gcm.workspace = true
hkdf.workspace = true
getrandom.workspace = true

[features]
default = []

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }

[build-dependencies]
tonic-build.workspace = true
