[package]
name = "api"
version.workspace = true
edition.workspace = true

[features]
dev-mode = []

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
base64.workspace = true
reqwest.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
ansi-to-html.workspace = true
rand.workspace = true
bcrypt.workspace = true
serde_yaml.workspace = true
tinytemplate.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
quick-xml.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
beecdstorage.workspace = true
sha2 = "0.10"
regex.workspace = true
types = { workspace = true, features = ["api"] }
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
hkdf = "0.12"
getrandom = "0.2"
