[package]
name = "types"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
api = ["dep:sqlx", "dep:utoipa"]

[dependencies]
utoipa = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { workspace = true, optional = true }
